--- a/templates/index.html
+++ b/templates/index.html
@@ -1,194 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="static\img\icons8-favorite-16.png" type="image/x-icon">
-    <link rel="shortcut icon" href="your-favicon.ico" type="image/x-icon">
-    <title>TextGuru.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static\css\style.css">
-    <!-- Include the Dancing Script font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap">
+{% extends 'base.html' %}
+
+{% block content %}
     <style>
-        body {
-            font-family: 'Dancing Script', sans-serif;
-            background-color: rgba(36, 204, 92, 0.65); /* Adjust the alpha value as needed */
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-image: url('https://static.vecteezy.com/system/resources/previews/000/518/121/original/vector-man-and-woman-with-smartphones-concept-illustration-texting-messaging-chatting-social-media-customer-assistance-dating-communication.jpg'); /* Replace with your image URL */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .spline-background {
-            width: 100%;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
-
-        h1 {
-            color: #333;
-            text-align: center;
-            font-size: 44px;
-            margin-bottom: 20px;
-            z-index: 1;
-        }
-
-        .glassy-section {
-            backdrop-filter: blur(10px); /* Adjust the blur amount */
+        .drag-drop-box {
+            border: 2px dashed #4CAF50;
             border-radius: 10px;
-            padding: 20px;
-            margin-top: 20px;
-            background: rgba(255, 255, 255, 0.5); /* Adjust the background color and transparency */
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add box shadow for depth */
-            z-index: 1;
-        }
-
-        form {
+            padding: 40px;
             text-align: center;
-            margin-top: 20px;
-        }
-
-        input[type="file"] {
-            padding: 10px;
-            margin-right: 10px;
-            border: none;
-            background-color: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        button {
-            padding: 10px 20px;
-            border: none;
-            background-color: #4CAF50;
-            color: #fff;
+            background-color: #f9f9f9;
             cursor: pointer;
-            transition: background-color 0.3s;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Add box shadow for depth */
+            transition: all 0.3s ease;
         }
 
-        button:hover {
-            background-color: #45a049;
+        .drag-drop-box:hover {
+            background-color: #e8f5e9;
+            border-color: #45a049;
         }
 
-        p {
-            text-align: center;
-            margin-top: 20px;
-            color: #333;
-        }
-
-        p.error-message {
-            color: red;
-            font-weight: bold;
-        }
-
-        /* Loading Animation */
-        .loading-container {
+        .drag-drop-box input[type="file"] {
             display: none;
-            align-items: center;
-            justify-content: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.7); /* Adjust the background color and transparency */
-            z-index: 9999;
         }
 
-        .loading-heart {
-            font-size: 48px;
-            animation: heartbeat 1s infinite;
-            color: #ff4b4b; /* Adjust the heart color */
+        .drag-drop-text {
+            font-size: 20px;
+            font-weight: 600;
+            color: #555;
         }
 
-        @keyframes heartbeat {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.2);
-            }
-            100% {
-                transform: scale(1);
-            }
+        .drag-drop-icon {
+            font-size: 50px;
+            color: #4CAF50;
+            margin-bottom: 10px;
         }
     </style>
-</head>
-<body>
-    <div class="loading-container" id="loadingContainer">
-        <div class="loading-heart">❤</div>
-    </div>    
-    <div class="glassy-section">
-        <h1>Sentiment Analysis</h1>
-        <!-- Add the description section -->
-        <section id="description">
-            <h2>Discover Sentiment Analysis of Your WhatsApp Conversations</h2>
+    <!-- Main content -->
+    <div class="container mt-5">
+        <div class="glassy-section">
+            <h1>Sentiment Analysis</h1>
+            <section id="description">
+                <h2>Discover Sentiment Analysis of Your WhatsApp Conversations</h2>
+                <hr>
+                <p>Upload your WhatsApp chat export file to analyze the sentiment of your conversation with your friend.
+                    Uncover interesting insights and explore the sentiment scores of individual messages. Get started
+                    now!</p>
+            </section>
+            {% if error %}
+            <div class="alert alert-danger error-message" role="alert">
+                {{ error }}
+            </div>
+            {% endif %}
+            <!-- Drag and Drop File Upload Section -->
+            <form id="fileUploadForm" method="post" enctype="multipart/form-data" onsubmit="showLoading()">
+                <label for="fileInput" class="drag-drop-box">
+                    <div class="drag-drop-icon">
+                        <i class="bi bi-upload"></i>
+                    </div>
+                    <p class="drag-drop-text">Drag and drop your file here, or click to browse</p>
+                    <input id="fileInput" type="file" name="file" accept=".txt">
+                </label>
+                <br>
+                <button type="submit" class="btn btn-success mt-4">Analyze</button>
+            </form>
+        </div>
 
-            <p>Upload your WhatsApp chat export file to analyze the sentiment of your conversation with your friend. Uncover interesting insights and explore the sentiment scores of individual messages. Get started now!</p>
-
-            <!-- Add a call-to-action button or form for file upload -->
-
+        <section id="tutorial" class="glassy-section mt-4">
+            <h2>Tutorial: Exporting WhatsApp Chat</h2>
+            <hr>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dmqVLOJXWPA?si=dkIAWANJ3ceSuLux" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <hr>
+            <div class="tutorial-step">
+                <h3>Step 1: Open WhatsApp</h3>
+                <p>Open the WhatsApp application on your mobile device.</p>
+            </div>
+            <div class="tutorial-step">
+                <h3>Step 2: Open the Chat</h3>
+                <p>Go to the chat that you want to export.</p>
+            </div>
+            <div class="tutorial-step">
+                <h3>Step 3: Tap on Options</h3>
+                <p>Tap on the options menu in the chat window (usually three dots or a gear icon).</p>
+            </div>
+            <div class="tutorial-step">
+                <h3>Step 4: Select More</h3>
+                <p>Select "More" or any similar option from the menu.</p>
+            </div>
+            <div class="tutorial-step">
+                <h3>Step 5: Export Chat</h3>
+                <p>Choose the "Export Chat" option from the menu.</p>
+            </div>
+            <div class="tutorial-step">
+                <h3>Step 6: Choose Export Method</h3>
+                <p>Choose whether to export with or without media and select your preferred method (email, etc.).</p>
+            </div>
         </section>
-        <form method="post" enctype="multipart/form-data" onsubmit="showLoading()">
-            <input type="file" name="file" accept=".txt">
-            <button type="submit">Analyze</button>
-        </form>
-        {% if error %}
-            <p class="error-message">{{ error }}</p>
-        {% endif %}
+        <br>
     </div>
-    <!-- Add the tutorial section -->
-    <section id="tutorial" class="glassy-section">
-        <h2>Tutorial: Exporting WhatsApp Chat</h2>
-
-        <div class="tutorial-step">
-            <h3>Step 1: Open WhatsApp</h3>
-            <p>Open the WhatsApp application on your mobile device.</p>
-        </div>
-
-        <div class="tutorial-step">
-            <h3>Step 2: Open the Chat</h3>
-            <p>Go to the chat that you want to export.</p>
-        </div>
-
-        <div class="tutorial-step">
-            <h3>Step 3: Tap on Options</h3>
-            <p>Tap on the options menu in the chat window (usually three dots or a gear icon).</p>
-        </div>
-
-        <div class="tutorial-step">
-            <h3>Step 4: Select More</h3>
-            <p>Select "More" or any similar option from the menu.</p>
-        </div>
-
-        <div class="tutorial-step">
-            <h3>Step 5: Export Chat</h3>
-            <p>Choose the "Export Chat" option from the menu.</p>
-        </div>
-
-        <div class="tutorial-step">
-            <h3>Step 6: Choose Export Method</h3>
-            <p>Choose whether to export with or without media and select your preferred method (email, etc.).</p>
-        </div>
-
-        <!-- Add more steps as needed -->
-
-    </section>
-    <script>
-        function showLoading() {
-            document.getElementById('loadingContainer').style.display = 'flex';
-        }
-    </script>
-</body>
-</html>
+{% endblock %}
